--- a/example/index.html
+++ b/example/index.html
@@ -5,18 +5,157 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <title>Movable Example</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     .box {
-      width: 100px;
-      height: 100px;
-      background: red;
+      position: absolute;
+      right: 20px;
+      bottom: 20px;
+      width: 320px;
+      height: 480px;
+      background: #fff;
+      display: flex;
+      flex-flow: column nowrap;
+      box-shadow: 0 0 20px 0 rgba(0, 0, 0, .15);
+    }
+
+    header {
+      position: relative;
+      width: 100%;
+      height: 60px;
+      background-color: #007aff;
+      padding: 0 10px;
+      display: flex;
+      align-items: center;
+    }
+
+    .body {
+      width: 100%;
+      height: 320px;
+      padding: 0 10px;
+      padding-top: 10px;
+    }
+
+    footer {
+      flex: 1;
+      box-shadow: 0 -1px 0 0 rgba(0,0,0,.04), 0 -2px 0 0 rgba(0,0,0,.01)
+    }
+
+    textarea {
+      display: block;
+      width: 100%;
+      height: 60px;
+      padding: 8px 10px;
+      overflow-x: hidden;
+      overflow-y: auto;
+      resize: none;
+      outline: 0;
+      background-color: #fff;
+      border: 0;
+      word-break: break-all;
+      font-size: 13px;
+      line-height: 17px;
+      -webkit-appearance: none;
+    }
+
+    .handler {
+      position: absolute;
+      top: 50%;
+      right: 10px;
+      transform: translateY(-50%);
+    }
+
+    .avatar {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      box-shadow: 0 3px 3px 0 rgba(0,0,0,.1);
+      cursor: pointer;
+      margin-right: 8px;
+    }
+
+    /* message */
+    .msgLeft-0-0+.msgLeft-0-0 {
+      margin-top: -15px;
+    }
+    .msgRight-0-1+.msgRight-0-1 {
+      margin-top: -15px;
+    }
+    .msgRow-0-2 {
+      width: 100%;
+      height: auto;
+      display: inline-block;
+      margin-bottom: 20px;
+    }
+    .msg-0-3 {
+      color: #666;
+      display: inline-block;
+      padding: 9px 14px;
+      position: relative;
+      overflow: hidden;
+      font-size: 15px;
+      max-width: 70%;
+      word-wrap: break-word;
+      transform: translate3d(0, 0, 0);
+      box-shadow: -1px -1px 8px 1px rgba(102,102,102,0.1), 5px 5px 15px 0 rgba(102,102,102,0.1);
+      transition: width .12s ease-out, height .12s ease-out;
+      line-height: 24px;
+      font-family: Lato;
+      text-decoration: none;
+      background-color: #fff;
+    }
+    .msg-0-3:after {
+      clear: both;
+    }
+    .msgBounceInLeft-0-4 {
+      animation: msgBounceIn .4s;
+      border-radius: 0 20px 20px 20px;
+      transform-origin: 0 0;
+    }
+    .msgBounceInRight-0-5 {
+      color: #fff;
+      float: right;
+      animation: msgBounceIn .4s;
+      background: linear-gradient(20deg, #3FD1E1 0%, #44D7CD 100%);
+      border-radius: 20px 20px 0 20px;
+      transform-origin: 100% 100%;
     }
   </style>
 </head>
 <body>
-  <div class="box" />
+  <div class="box">
+    <header>
+      <img class="avatar" src="https://avatars1.githubusercontent.com/u/7463687?s=460&v=4" />
+      <span>Zero</span>
+      <span class="handler">点我拖拽</span>
+    </header>
+    <div class="body">
+      <div class="msgRow-0-2 msgLeft-0-0">
+        <div id="00100" type="text" me="true" class="msg-0-3 msgBounceInLeft-0-4">
+          Hi, 很高兴遇见你
+        </div>
+      </div>
+      <div class="msgRow-0-2 msgLeft-0-0">
+        <div id="00101" type="text" me="true" class="msg-0-3 msgBounceInLeft-0-4">
+          我是Zero.
+        </div>
+      </div>
+    </div>
+    <footer>
+      <textarea placeholder="请输入"></textarea>
+    </footer>
+  </div>
 </body>
 <script src="/lib/index.umd.js"></script>
 <script>
-  new movable({ handler: '.box' });
+  new movable({
+    handler: '.handler',
+    container: '.box',
+    boundable: true,
+  });
 </script>
 </html>
