--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </footer>
   </div>
 </body>
-<script src="/lib/index.umd.js"></script>
+<script src="./lib/index.umd.js"></script>
 <script>
   new movable({
     handler: '.handler',
