--- a/example/index.html
+++ b/example/index.html
@@ -124,9 +124,18 @@
       border-radius: 20px 20px 0 20px;
       transform-origin: 100% 100%;
     }
+    .rect {
+      position: absolute;
+      top: 100px;
+      left: 100px;
+      width: 100px;
+      height: 100px;
+      background-color: red;
+    }
   </style>
 </head>
 <body>
+  <div class="rect"></div>
   <div class="box">
     <header>
       <img class="avatar" src="https://avatars1.githubusercontent.com/u/7463687?s=460&v=4" />
@@ -155,6 +164,11 @@
   new movable({
     handler: '.handler',
     container: '.box',
+    boundable: true,
+  });
+
+  new movable({
+    handler: '.rect',
     boundable: true,
   });
 </script>
