--- a/example/index.html
+++ b/example/index.html
@@ -11,6 +11,15 @@
       box-sizing: border-box;
     }
 
+    body {
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+
     .box {
       position: absolute;
       right: 20px;
@@ -167,9 +176,9 @@
     boundable: true,
   });
 
-  new movable({
-    handler: '.rect',
-    boundable: true,
-  });
+  // new movable({
+  //   handler: '.rect',
+  //   boundable: true,
+  // });
 </script>
 </html>
