:bug:(mouse delta): fix mouse delta by reset mouse delta after mouse up, that is, use mouse delta already

--- a/example/index.html
+++ b/example/index.html
@@ -170,15 +170,16 @@
 </body>
 <script src="./lib/index.umd.js"></script>
 <script>
-  new movable({
-    handler: '.handler',
-    container: '.box',
-    boundable: true,
-  });
-
   // new movable({
-  //   handler: '.rect',
+  //   handler: '.handler',
+  //   container: '.box',
   //   boundable: true,
   // });
+
+  new movable({
+    handler: '.rect',
+    container: '.rect',
+    boundable: true,
+  });
 </script>
 </html>
