:lipstics: drop console by uglify plugin option: drop_console: true, pure_funcs: [console.log]

--- a/example/index.html
+++ b/example/index.html
@@ -170,11 +170,11 @@
 </body>
 <script src="./lib/index.umd.js"></script>
 <script>
-  // new movable({
-  //   handler: '.handler',
-  //   container: '.box',
-  //   boundable: true,
-  // });
+  new movable({
+    handler: '.handler',
+    container: '.box',
+    boundable: true,
+  });
 
   new movable({
     handler: '.rect',
