--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
       box-sizing: border-box;
     }
 
+    body {
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+
     .box {
       position: absolute;
       right: 20px;
@@ -124,9 +133,25 @@
       border-radius: 20px 20px 0 20px;
       transform-origin: 100% 100%;
     }
+    .rect {
+      position: absolute;
+      top: 200px;
+      left: 200px;
+      width: 100px;
+      height: 100px;
+      background-color: red;
+    }
+
+    .relative {
+      width: 100px;
+      height: 100px;
+      background-color: purple;
+    }
   </style>
 </head>
 <body>
+  <div class="rect"></div>
+  <div class="relative"></div>
   <div class="box">
     <header>
       <img class="avatar" src="https://avatars1.githubusercontent.com/u/7463687?s=460&v=4" />
@@ -155,6 +180,16 @@
   new movable({
     handler: '.handler',
     container: '.box',
+    boundable: true,
+  });
+
+  new movable({
+    handler: '.rect',
+    boundable: true,
+  });
+
+  new movable({
+    handler: '.relative',
     boundable: true,
   });
 </script>
